test/files/invalid/file_extension_twice.stderr
error: Cannot set file_extension twice
  ┌─ test/files/invalid/file_extension_twice.fbs:1:1
  │
1 │ file_extension "FOO";
  │ ^^^^^^^^^^^^^^^^^^^^^ first declaration was here
2 │ file_extension "BAR";
  │ ^^^^^^^^^^^^^^^^^^^^^ additional declaration was here

Error: Bailing because of errors
